# bome_shading_constraint_filter

./: CMakeLists.txt  README.md  run_dataset_2.bat  run_dataset_2_with_initial_median_filter.bat  run_dataset_3.bat  run_dataset_3_with_initial_median_filter.bat  run_dataset_4.bat  run_dataset_4_with_initial_median_filter.bat  run_dataset_5.bat  run_dataset_5_with_initial_median_filter.bat  run_dataset_8.bat  run_dataset_8_with_initial_median_filter.bat
data/bohme_datasets/2/: image_000_intensity.tiff  image_000_x.tiff
data/bohme_datasets/3/: image_000_depth.tiff  image_000_intensity.tiff  image_000_y.tiff  palette.txt
data/bohme_datasets/4/: image_000_depth.tiff  image_000_intensity.tiff  image_000_x.tiff
data/bohme_datasets/5/: image_000_intensity.tiff  image_000_y.tiff  palette.txt
data/bohme_datasets/8/: camera_params.txt  image_000_depth.tiff  image_000_intensity.tiff  image_000_x.tiff  image_000_y.tiff  palette.txt
src/bohme_shading_constaint_filter/: bohme_shading_constraint_filter.cpp  bohme_shading_constraint_filter.h  main.cpp  normal_computer_grad.cpp  normal_computer_grad.h  single_frame.cpp  single_frame.h  stdafx.cpp
